plugins {
    id 'java'
    id 'groovy'
    id 'idea'
    id 'org.springframework.boot' version '3.0.3'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = "17.PREVIEW"

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'commons-validator:commons-validator:1.7'

    testImplementation("org.codehaus.groovy:groovy:3.0.9")
    testImplementation("org.spockframework:spock-core:2.0-groovy-3.0")
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).all {
    options.compilerArgs += ['--enable-preview']
}